--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,5 +76,5 @@ services:
     privileged: true
     volumes:
       - ./app/build/outputs/apk/debug:/root/tmp
-      - /androidlogs:/var/log/supervisor/
+      - /var/log/supervisor/:/var/log/supervisor/
 
