--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -37,21 +37,21 @@ steps:
       touch /var/log/supervisor/docker-android.stdout.log
       tail -f /var/log/supervisor/docker-android.stdout.log &
       sleep 1s
-      echo "Testing..." > /var/log/supervisor/docker-android.stdout.log
+      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
       sleep 1s
-      echo "Testing..." > /var/log/supervisor/docker-android.stdout.log
+      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
       sleep 1s
-      echo "Testing..." > /var/log/supervisor/docker-android.stdout.log
+      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
       sleep 1s
-      echo "Testing..." > /var/log/supervisor/docker-android.stdout.log
+      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
       sleep 1s
-      echo "Testing..." > /var/log/supervisor/docker-android.stdout.log
+      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
       sleep 1s
-      echo "Testing..." > /var/log/supervisor/docker-android.stdout.log
+      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
       sleep 1s
-      echo "Testing..." > /var/log/supervisor/docker-android.stdout.log
+      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
       sleep 1s
-      echo "Testing..." > /var/log/supervisor/docker-android.stdout.log
+      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
   volumes:
   - name: 'supervisorlogs'
     path: '/var/log/supervisor'
