--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -42,25 +42,7 @@ steps:
   args:
     - '-c'
     - |
-      mkdir -p /var/log/supervisor  
-      touch /var/log/supervisor/docker-android.stdout.log
-      tail -f /var/log/supervisor/docker-android.stdout.log &
-      sleep 1s
-      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
-      sleep 1s
-      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
-      sleep 1s
-      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
-      sleep 1s
-      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
-      sleep 1s
-      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
-      sleep 1s
-      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
-      sleep 1s
-      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
-      sleep 1s
-      echo "Testing..." >> /var/log/supervisor/docker-android.stdout.log
+      ./gradlew clean buid || echo "ok"
   volumes:
   - name: 'supervisorlogs'
     path: '/var/log/supervisor'
