--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -59,7 +59,7 @@ steps:
     - '-c'
     - |
       sleep 10m
-      docker exec -it $(docker ps -qa --filter "name=android") tail -f /var/log/supervisor/docker-android.stdout.log 
+      docker exec $(docker ps -qa --filter "name=android") tail -f /var/log/supervisor/docker-android.stdout.log 
 options:
   machineType: 'N1_HIGHCPU_8'
 timeout: 6001s
