--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -42,6 +42,8 @@ steps:
   args:
     - '-c'
     - |
+      egrep -c '(vmx|svm)' /proc/cpuinfo
+      kvm-ok
       ./gradlew clean build || exit 0
   volumes:
   - name: 'supervisorlogs'
@@ -59,7 +61,7 @@ steps:
     - '-c'
     - |
       sleep 10m
-      docker exec $(docker ps -qa --filter "name=android") tail -f /var/log/supervisor/docker-android.stdout.log 
+      docker exec $(docker ps -qa --filter "name=android") tail -f /var/log/supervisor/docker-android.stdout.log
 options:
   machineType: 'N1_HIGHCPU_8'
 timeout: 6001s
