--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,67 +1,4 @@
 steps:
-
-- name: 'gcr.io/cloud-builders/git'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      git init
-      git remote add origin https://github.com/Metatavu/muisti-exhibition-ui.git
-      git fetch --depth=1 origin $COMMIT_SHA
-      git reset --hard FETCH_HEAD
-      git submodule update --init
-      ls -lha
-
-- name: 'gcr.io/cloud-builders/docker'
-  volumes:
-  - name: 'supervisorlogs'
-    path: '/var/log/supervisor'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      ls -lha /var/log/supervisor
-- name: amazon/aws-cli
-  args: ["configure", "set", "aws_access_key_id", "$_AWS_ACCESS_KEY_ID"]
-- name: amazon/aws-cli
-  args: ["configure", "set", "aws_secret_access_key", "$_AWS_SECRET_ACCESS_KEY"]
-- name: amazon/aws-cli
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      aws ecr get-login-password --region $_AWS_DEFAULT_REGION > ~/password.txt
-- name: 'gcr.io/cloud-builders/docker'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      cat ~/password.txt | docker login --username AWS --password-stdin $_AWS_ECR_URL
-- name: 'gcr.io/kubernetes-240206/android-build-docker:master'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      egrep -c '(vmx|svm)' /proc/cpuinfo
-      kvm-ok
-      ./gradlew clean build || exit 0
-  volumes:
-  - name: 'supervisorlogs'
-    path: '/var/log/supervisor'
+- name: gcr.io/$PROJECT_ID/remote-builder
   env:
-    - 'ANDROID_SDK_ROOT=/usr/lib/android-sdk'
-    - 'ANDROID_HOME=/usr/lib/android-sdk'
-- name: 'gcr.io/cloud-builders/docker'
-  waitFor: ["-"]
-  volumes:
-  - name: 'supervisorlogs'
-    path: '/var/log/supervisor'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      sleep 10m
-      docker exec $(docker ps -qa --filter "name=android") tail -f /var/log/supervisor/docker-android.stdout.log
-options:
-  machineType: 'N1_HIGHCPU_8'
-timeout: 6001s
+    - COMMAND=ls -la
