--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,3 +3,4 @@ steps:
   env:
     - ZONE=us-central1-b
     - COMMAND=ls -la
+    - INSTANCE_ARGS=--zone us-central1 --min-cpu-platform "Intel Haswell" --licenses "https://compute.googleapis.com/compute/v1/projects/vm-options/global/licenses/enable-vmx" --image-project=$PROJECT_ID --image=android-build-rev1
