--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,4 +3,5 @@ steps:
   env:
     - ZONE=us-central1-b
     - COMMAND=ls -la
-    - INSTANCE_ARGS=--zone us-central1 --min-cpu-platform "Intel Haswell" --image-project=$PROJECT_ID --image=android-build-rev1
+    - INSTANCE_NAME=
+    - INSTANCE_ARGS=test --zone us-central1 --min-cpu-platform "Intel Haswell" --image-project=$PROJECT_ID --image=android-build-rev1
