--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,7 @@
 steps:
 - name: gcr.io/$PROJECT_ID/remote-builder
   env:
+    - USERNAME=root
     - ZONE=us-central1-b
     - COMMAND=ls -la
     - INSTANCE_ARGS=--zone us-central1-b --image-project=$PROJECT_ID --image=android-build-rev1
