--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,5 +13,5 @@ steps:
   env:
     - USERNAME=root
     - ZONE=us-central1-b
-    - COMMAND=pwd && whoami && ls -lha
+    - COMMAND=cd workspace && ./gradlew clean test
     - INSTANCE_ARGS=--zone us-central1-b --image-project=$PROJECT_ID --image=android-build-rev2
