--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
 
     <application
         android:name=".ExhibitionUIApplication"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher">
+
         <activity
             android:name=".views.PreviewActivity"
             android:label="@string/title_activity_preview"
@@ -22,7 +24,6 @@
         <activity
             android:name=".views.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_main"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
