--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,5 +13,5 @@ steps:
   env:
     - USERNAME=root
     - ZONE=us-central1-b
-    - COMMAND=cd workspace && ./gradlew clean test
+    - COMMAND=cd workspace && JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64 ANDROID_SDK_ROOT=/usr/lib/android-sdk ./gradlew clean test
     - INSTANCE_ARGS=--zone us-central1-b --image-project=$PROJECT_ID --image=android-build-rev2
