--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,9 @@ android {
 
     defaultConfig {
         applicationId "fi.metatavu.muisti.exhibitionui"
-        minSdkVersion 29
+        minSdkVersion 28
         targetSdkVersion 29
-        versionCode 3
+        versionCode 4
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -71,6 +71,7 @@ android {
             buildConfigField("String", "MQTT_USER", "\"${System.getProperty('MQTT_USER')}\"")
             buildConfigField("String", "MQTT_PASSWORD", "\"${System.getProperty('MQTT_PASSWORD')}\"")
             buildConfigField("String", "MQTT_BASE_TOPIC", "\"${System.getProperty('MQTT_BASE_TOPIC')}\"")
+            buildConfigField("String", "KEYCLOAK_DEMO_TAG", "\"${System.getProperty('KEYCLOAK_DEMO_TAG')}\"")
         }
 
         debug {
@@ -85,6 +86,7 @@ android {
             buildConfigField("String", "MQTT_USER", "\"${System.getProperty('MQTT_USER')}\"")
             buildConfigField("String", "MQTT_PASSWORD", "\"${System.getProperty('MQTT_PASSWORD')}\"")
             buildConfigField("String", "MQTT_BASE_TOPIC", "\"${System.getProperty('MQTT_BASE_TOPIC')}\"")
+            buildConfigField("String", "KEYCLOAK_DEMO_TAG", "\"${System.getProperty('KEYCLOAK_DEMO_TAG')}\"")
         }
     }
     lintOptions {
