--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,6 +168,15 @@ dependencies {
 
     implementation 'com.github.deano2390:FlowTextView:2.0.5'
 
+    //MapBox
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.0'
+
+    // Apache IOUtils
+    implementation "org.apache.commons:commons-io:1.3.2"
+
+    //GeoPackage
+    implementation "mil.nga.geopackage:geopackage:4.0.0"
+
     // Android test
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
