--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
@@ -16,4 +10,4 @@
 app/.env
 app/.env_tests
 .env
-.idea/jarRepositories.xml
+.idea/
