--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,10 +170,16 @@ dependencies {
 
     implementation 'com.github.deano2390:FlowTextView:2.0.5'
 
+    // Rhino
+
+    implementation 'org.mozilla:rhino:1.7.12'
+
     // MapBox
+
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.0'
 
     // Apache IOUtils
+
     implementation "org.apache.commons:commons-io:1.3.2"
 
     // Android test
