--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,25 +9,23 @@
     <application
         android:name=".ExhibitionUIApplication"
         android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat"
         android:icon="@mipmap/ic_launcher">
 
         <activity
             android:name=".views.PreviewActivity"
             android:label="@string/title_activity_preview"
-            android:screenOrientation="behind"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:screenOrientation="behind"/>
 
         <activity
             android:name=".views.PageActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="behind"
-            android:theme="@style/FullscreenTheme" />
+            android:screenOrientation="behind" />
 
         <activity
             android:name=".views.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="behind"
-            android:theme="@style/FullscreenTheme">
+            android:screenOrientation="behind">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,8 +35,7 @@
 
         <activity
             android:name=".views.SettingsActivity"
-            android:label="@string/device_settings"
-            android:theme="@style/AppTheme" />
+            android:label="@string/device_settings" />
 
         <service
             android:name=".services.UpdateUserValueService"
