--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:name=".ExhibitionUIApplication"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat"
+        android:background="@android:color/black"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".views.PreviewActivity"
@@ -20,12 +21,14 @@
         <activity
             android:name=".views.PageActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:background="@android:color/black"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="behind" />
 
         <activity
             android:name=".views.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:background="@android:color/black"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="behind">
             <intent-filter>
