--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,7 +132,7 @@ dependencies {
 
     // Exo player
 
-    implementation 'com.google.android.exoplayer:exoplayer:2.11.3'
+    implementation "com.google.android.exoplayer:exoplayer:$rootProject.exoplayerVersion"
     implementation 'rongi.rotate-layout:rotate-layout:3.0.0'
 
     // Room components
