Upgraded gradle version

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,6 @@ android.enableJetifier=true
 
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
