--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.7.20'
     ext.materialVersion = "1.1.0"
     ext.archLifecycleVersion = "2.2.0"
-    ext.roomVersion = "2.2.4"
+    ext.roomVersion = "2.5.1"
     ext.daggerVersion = "2.26"
     ext.jaxrs_functional_test_builder_version = "1.0.4"
     ext.awaitility_version = "4.0.2"
@@ -12,11 +12,11 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:8.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.avast.gradle:gradle-docker-compose-plugin:0.10.7"
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,8 +27,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
     }
 }
 
