Removed tests and replaced api-client subproject with build-time generated api-client

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.avast.gradle:gradle-docker-compose-plugin:0.10.7"
+        classpath "org.openapitools:openapi-generator-gradle-plugin:6.6.0"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -28,6 +29,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 }
 
