--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,22 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
-apply plugin: 'docker-compose'
+apply plugin: 'org.openapi.generator'
 
 kapt {
     correctErrorTypes true
 }
 
-dockerCompose {
-    captureContainersOutput = true
+android {
+    sourceSets {
+        main {
+            java {
+                srcDir("build/generated/api-client/src/main/kotlin")
+            }
+        }
+    }
 }
+
 def readFile(fileName) {
     file(fileName).readLines().each() {
         if (!it.isEmpty() && !it.startsWith("#")) {
@@ -39,7 +46,7 @@ android {
 
     defaultConfig {
         applicationId "fi.metatavu.muisti.exhibitionui"
-        minSdkVersion 31
+        minSdkVersion 28
         targetSdkVersion 33
         versionCode 104000
         versionName "1.4.0"
@@ -92,15 +99,6 @@ android {
         }
     }
 
-    testOptions {
-        unitTests.all {
-            dependsOn tasks.composeUp
-            finalizedBy tasks.composeDown
-            testLogging {
-                showStandardStreams = true
-            }
-        }
-    }
     namespace 'fi.metatavu.muisti.exhibitionui'
     lint {
         disable 'AllowBackup', 'GoogleAppIndexingWarning', 'MissingApplicationIcon'
@@ -122,14 +120,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.preference:preference:1.1.0'
-    implementation project(':api-client')
     implementation "com.squareup.okhttp3:okhttp:4.9.3"
     implementation "io.github.cdimascio:java-dotenv:5.1.3"
 
     // Moshi
 
-    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
-    implementation "com.squareup.moshi:moshi-adapters:1.8.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.13.0"
+    implementation "com.squareup.moshi:moshi-adapters:1.13.0"
 
     // Exo player
 
@@ -189,16 +186,25 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    // Test
-
-    testImplementation 'junit:junit:4.12'
-    testImplementation "fi.metatavu.jaxrs.testbuilder:jaxrs-functional-test-builder:$jaxrs_functional_test_builder_version"
-    testImplementation 'io.appium:java-client:3.3.0'
-    testImplementation project(':api-test-builder')
-
     // Kapt
 
     compileOnly 'com.github.pengrad:jdk9-deps:1.0'
 }
 
 
+openApiGenerate {
+    generatorName = "kotlin"
+    inputSpec = "$rootDir/muisti-api-spec/swagger.yaml".toString()
+    outputDir = "$buildDir/generated/api-client".toString()
+    packageName = "fi.metatavu.muisti.api.client"
+
+    configOptions = [
+            library: "jvm-okhttp4",
+            dateLibrary: "string",
+            collectionType: "array"
+    ]
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    dependsOn tasks.openApiGenerate
+}
