--- a/.github/workflows/master-build-apk.yaml
+++ b/.github/workflows/master-build-apk.yaml
@@ -22,6 +22,11 @@ jobs:
 
       - name: Build APK
         run: |
+          echo ${{ secrets.SIGN_KEYSTORE }} > /tmp/upload-keystore.b64 && base64 -d -i /tmp/upload-keystore.b64 > /tmp/upload-keystore.jks
+          echo SIGN_STORE_PASSWORD=${{ secrets.SIGN_STORE_PASSWORD }} >> ~/.gradle/gradle.properties
+          echo SIGN_KEY_ALIAS=${{ secrets.SIGN_KEY_ALIAS }} >> ~/.gradle/gradle.properties
+          echo SIGN_KEY_PASSWORD=${{ secrets.SIGN_KEY_PASSWORD }} >> ~/.gradle/gradle.properties
+          echo SIGN_STORE_FILE=/tmp/upload-keystore.jks >> ~/.gradle/gradle.properties
           echo MUISTI_API_BASE_URL=${{ secrets.MUISTI_API_BASE_URL }} >> app/.env
           echo KEYCLOAK_URL=${{ secrets.KEYCLOAK_URL }} >> app/.env
           echo MQTT_BASE_TOPIC=${{ secrets.MQTT_BASE_TOPIC }} >> app/.env
@@ -35,7 +40,7 @@ jobs:
           echo MQTT_PASSWORD=${{ secrets.MQTT_PASSWORD }} >> app/.env
           echo MQTT_USER=${{ secrets.MQTT_USER }} >> app/.env
           echo MAP_BOX_ACCESS_TOKEN=${{ secrets.MAP_BOX_ACCESS_TOKEN }} >> app/.env
-          ./gradlew assemble
+          ./gradlew assembleRelease
 
       - name: Upload APK
         uses: shallwefootball/s3-upload-action@master
