--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,23 @@ android {
         readFile('.env')
     }
 
+    signingConfigs {
+
+        release {
+            storeFile file(SIGN_STORE_FILE)
+            storePassword SIGN_STORE_PASSWORD
+            keyAlias SIGN_KEY_ALIAS
+            keyPassword SIGN_KEY_PASSWORD
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
+
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField("String", "MUISTI_API_BASE_URL", "\"${System.getProperty('MUISTI_API_BASE_URL')}\"")
