--- a/.github/workflows/master-build-apk.yaml
+++ b/.github/workflows/master-build-apk.yaml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - master
-      - feature-199-app-updater
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,7 +29,7 @@ jobs:
           git add app/build.gradle
           git commit -m "Updated version"
           git checkout develop
-          git merge feature-199-app-updater
+          git merge master
 
       - name: Bump version and push tag
         id: tag_version
