--- a/.github/workflows/master-build-apk.yaml
+++ b/.github/workflows/master-build-apk.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Update version gradle
         run: |
           sed -i 's/versionName .*/versionName \"${{ steps.tag_version.outputs.new_tag }}\"/g' app/build.gradle
-          sed -i 's/versionCode .*/versionCode `echo "${{ steps.tag_version.outputs.new_tag }}" | awk -F. '{printf "%d%02d%03d\n", $1, $2, $3}'`/g' app/build.gradle
+          VERSION_CODE=`echo "${{ steps.tag_version.outputs.new_tag }}" | awk -F. '{printf "%d%02d%03d\n", $1, $2, $3}'` sed -i "s/versionCode .*/versionCode $VERSION_CODE/g" app/build.gradle
           
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
