--- a/.github/workflows/master-build-apk.yaml
+++ b/.github/workflows/master-build-apk.yaml
@@ -66,7 +66,7 @@ jobs:
           echo KEYCLOAK_PASSWORD=${{ secrets.KEYCLOAK_PASSWORD }} >> app/.env
           echo KEYCLOAK_DEMO_TAG=${{ secrets.KEYCLOAK_DEMO_TAG }} >> app/.env
           echo DESTRUCTIVE_MIGRATIONS=${{ secrets.DESTRUCTIVE_MIGRATIONS }} >> app/.env
-          echo MQTT_BASE_URL=${{ secrets.MQTT_BASE_URL }} >> app/.env
+          echo MQTT_URLS=${{ secrets.MQTT_URLS }} >> app/.env
           echo MQTT_PASSWORD=${{ secrets.MQTT_PASSWORD }} >> app/.env
           echo MQTT_USER=${{ secrets.MQTT_USER }} >> app/.env
           echo MAP_BOX_ACCESS_TOKEN=${{ secrets.MAP_BOX_ACCESS_TOKEN }} >> app/.env
